force-app/main/default/objects/Krow__Project_Forecast__c/Krow__Project_Forecast__c.object-meta.xml
<CustomObject>
    <label>Project Forecast</label>
    <nameField>
        <displayFormat>PF{000000}</displayFormat>
        <label>Project Forecast	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>