force-app/main/default/objects/Krow__Project_Forecast__c/fields/Krow__Actual_Billed__c.field-meta.xml
<CustomField>
    <fullName>Krow__Actual_Billed__c</fullName>
    <label>Actual Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>