force-app/main/default/objects/Krow__Project_Forecast__c/fields/Krow__Baseline_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Krow__Baseline_Revenue__c</fullName>
    <label>Baseline Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>