force-app/main/default/objects/Krow__Project_Forecast__c/fields/Krow__Forecast_Margin__c.field-meta.xml
<CustomField>
    <fullName>Krow__Forecast_Margin__c</fullName>
    <formula>Krow__Forecast_Revenue__c  -  Krow__Forecast_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>