force-app/main/default/objects/Krow__Project_Forecast__c/fields/Krow__Forecast_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Krow__Forecast_Margin_Percent__c</fullName>
    <formula>IF(OR(ISBLANK(Krow__Forecast_Revenue__c), IF(Krow__Forecast_Revenue__c = 0, TRUE, FALSE)), 0, (Krow__Forecast_Revenue__c - Krow__Forecast_Cost__c ) / Krow__Forecast_Revenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>