force-app/main/default/objects/Krow__Project_Forecast__c/fields/Krow__Forecast_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Krow__Forecast_Revenue__c</fullName>
    <label>Forecast Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>