force-app/main/default/objects/Krow__Project_Forecast__c/fields/Krow__Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project__c</fullName>
    <label>Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Project Forecasts</relationshipLabel>
    <relationshipName>Project_Forecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>