force-app/main/default/objects/Krow__Project_Forecast__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Start_Date__c</columns>
    <columns>Krow__End_Date__c</columns>
    <columns>Krow__Project__c</columns>
    <columns>Krow__Estimated_Hours__c</columns>
    <columns>Krow__Actual__c</columns>
    <columns>Krow__Actual_Billed__c</columns>
    <columns>Krow__Actual_Hours__c</columns>
    <columns>Krow__Budgeted_Cost__c</columns>
    <columns>Krow__Expected_Revenue__c</columns>
    <columns>Krow__Forecast_Cost__c</columns>
    <columns>Krow__Forecast_Hours__c</columns>
    <columns>Krow__Forecast_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>